added panels and borders to the html

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>New York Times Article Scrubber</title>
 		<script type="text/javascript" src="http://momentjs.com/downloads/moment.min.js"></script>
 		<!-- Latest compiled and minified CSS -->
