--- a/app/src/index.html
+++ b/app/src/index.html
@@ -5,18 +5,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>New York Times Article Scrubber</title>
 		<script type="text/javascript" src="https://momentjs.com/downloads/moment.min.js"></script>
-		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-		<!-- Optional theme -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+		<link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900,400italic,700italic,900italic|Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
-        <nav id="navHeader">
-			<div class="container">
-				<h1 id="pageTitle" class="text-center">New York Times Article Scrubber</h1>
-				<h2 id="pageSubTitle" class="text-center">Search for and anotate articles of interest</h2>
-			</div>
-		</nav>
 		<!-- This is where React will deploy the contents it generates -->
 		<div id="app"></div>
 		<!-- All the JS code will be transpiled into this bundle.js file -->
